# flats-searcher

./: .gitignore  Dockerfile  README.md  bot.Dockerfile  config.plist  docker-compose.yml  init-letsencrypt.sh  main.py  pyproject.toml  update_job_config
.github/: prod_deployment.yml
.github/workflows/: prod_deployment.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
nginx/: nginx.conf
src/: api.py  bot.py  conf.py  debug.py  models.py  old.params.json  params.json  params_100.json  params_100_new.json  params_70.json  repository.py  scheduler.py  service.py  tasks.py  telegram.py  test_repository.py
src/alembic/: env.py
src/alembic/versions/: 9787c7c67c22_initial.py
src/backend/: bot.py  conf.py  scheduler.py
src/backend/parser/: api.py  proxies.json  tasks.py  telegram.py
src/frontend/static/metro/: app.js  index.html  styles.css
src/parser/: api.py  tasks.py
src/webapp/static/metro/: app.js  index.html  metro-data.js  styles.css
tests/: conftest.py
tests/models/: test_offer.py
