[tool.poetry]
name = "cian-flat-searcher"
version = "0.1.0"
description = "Парсинг объявлений циан"
authors = ["Petrov Mikhail <petrov.ma@icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
requests = "^2.32.3"
bs4 = "^0.0.2"
structlog = "^24.2.0"
schedule = "^1.2.2"
pydantic = "^2.7.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
